# delete-rest

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  rustfmt.toml
resources/test/: cfg.yaml  keep_bad.txt
src/: action.rs  config.rs  default_config.yaml  file_source.rs  keepfile.rs  lib.rs  main.rs  test_utils.rs
wix/: License.rtf  main.wxs
